--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>HANGMAN</h1>
     </header>
 
-    <main onload="pickAndConvertWord()">
+    <main>
        <div class="wrapper">
             <div class = "columnImg">
                 <img class="gallows" src="assets/images/gallows.jpeg" alt="Gallows">
